--- a/hw2/Practise_2_DecisionTree.ipynb
+++ b/hw2/Practise_2_DecisionTree.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 228,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, accuracy_score\n",
     "from sklearn.base import BaseEstimator\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
@@ -110,13 +110,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 238,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def misclassification_of_set(y):\n",
+    "    if len(y) == 0:\n",
+    "        return 0\n",
     "    p = [float(np.sum(y==val))/len(y) for val in np.unique(y)]\n",
     "    return 1 - np.max(p)"
    ]
@@ -256,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 235,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 236,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -333,12 +335,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34.1033070866\n"
+      "0.348\n",
+      "0.308\n"
      ]
     }
    ],
    "source": [
-    "estimator = DecisionTree()\n",
+    "estimator = DecisionTree(criterion='MSE')\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(mean_squared_error(y_test, est.predict(X_test)))\n",
+    "estimator = DecisionTreeRegressor()\n",
     "est = estimator.fit(X_train, y_train)\n",
     "print(mean_squared_error(y_test, est.predict(X_test)))"
    ]
@@ -451,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 234,
    "metadata": {
     "collapsed": true
    },
@@ -461,7 +467,52 @@
     "data = pd.read_csv('german.data-numeric', header=None, delim_whitespace=True)\n",
     "\n",
     "X = data[list(set(data.columns) - set([24]))].values\n",
-    "y = data[24].values"
+    "y = data[24].values\n",
+    "X_train = X[:3*len(X)/4]\n",
+    "X_test = X[3*len(X)/4:]\n",
+    "y_train = y[:3*len(X)/4]\n",
+    "y_test = y[3*len(X)/4:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.752\n",
+      "0.716\n",
+      "0.76\n",
+      "0.716\n",
+      "0.724\n",
+      "0.716\n"
+     ]
+    }
+   ],
+   "source": [
+    "estimator = DecisionTree(criterion='gini', max_depth=5)\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(accuracy_score(y_test, est.predict(X_test)))\n",
+    "estimator = DecisionTreeClassifier(max_depth=5)\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(accuracy_score(y_test, est.predict(X_test)))\n",
+    "estimator = DecisionTree(criterion='entropy', max_depth=5)\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(accuracy_score(y_test, est.predict(X_test)))\n",
+    "estimator = DecisionTreeClassifier(max_depth=5)\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(accuracy_score(y_test, est.predict(X_test)))\n",
+    "estimator = DecisionTree(criterion='misclassification', max_depth=5)\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(accuracy_score(y_test, est.predict(X_test)))\n",
+    "estimator = DecisionTreeClassifier(max_depth=5)\n",
+    "est = estimator.fit(X_train, y_train)\n",
+    "print(accuracy_score(y_test, est.predict(X_test)))"
    ]
   },
   {
