--- a/hw7/Kholopov.ipynb
+++ b/hw7/Kholopov.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "**Вопрос 3**:  Выпишите производную $\\frac{d c_{n+1}}{d c_{k}}$ для LSTM http://colah.github.io/posts/2015-08-Understanding-LSTMs/, объясните формулу, когда производная затухает, когда взрывается?\n",
     "\n",
-    "<Ответ>$\\frac{d c_{n+1}}{d c_{k}} = \\frac{d c_{n+1}}{d c_{n}}\\frac{d c_{n}}{d c_{k}} = diag(\\sigma(x_{n+1},h_{n}))\\frac{d c_{n}}{d c_{k}} = diag(\\prod_{i=k}^{n}\\sigma(x_{i+1},h_{i}))$ (Где $\\prod$ - поэлементное произведение.) Если несколько компонент $x_{i}$ значительно меньше остальных, то градиент затухнет.\n",
+    "<Ответ>$\\frac{d c_{n+1}}{d c_{k}} = \\frac{d c_{n+1}}{d c_{n}}\\frac{d c_{n}}{d c_{k}} = diag(\\sigma(x_{n+1},h_{n}))\\frac{d c_{n}}{d c_{k}} = diag(\\prod_{i=k}^{n}\\sigma(x_{i+1},h_{i}))$ (Где $\\prod$ - поэлементное произведение.) Если несколько компонент $x_{i}$ значительно меньше остальных, то градиент затухнет. Поскольку на каждом этапе берётся so\n",
     "\n",
     "**Вопрос 4**: Зачем нужен TBPTT почему BPTT плох?\n",
     "\n",
@@ -25,7 +25,7 @@
     "\n",
     "**Вопрос 5**: Как комбинировать рекуррентные и сверточные сети, а главное зачем? Приведите несколько примеров реальных задач.\n",
     "\n",
-    "<Ответ> Можно по картинкам генерировать текст или даже звук.\n",
+    "<Ответ> Можно по картинкам генерировать текст или звук, можно генерировать подписи к музыке\n",
     "\n",
     "**Вопрос 6**: Объясните интуицию выбора размера эмбединг слоя? почему это опасное место?\n",
     "\n",
@@ -48,9 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -80,9 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -106,9 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -168,7 +162,7 @@
     "word_counts = defaultdict(int)\n",
     "for caption in captions:\n",
     "    for cap in caption:\n",
-    "        for word in cap[1:-1]:\n",
+    "        for word in cap[1:-1]:         #I don't add '#START#', '#END#', since they are already in vocabulary\n",
     "            word_counts[word] += 1\n",
     "\n",
     "vocab  = ['#UNK#', '#START#', '#END#']\n",
@@ -205,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -260,9 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import theano\n",
@@ -341,9 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -372,7 +360,8 @@
     "print \"output shape = \", predicted_probabilities.output_shape\n",
     "\n",
     "#remove if you know what you're doing (e.g. 1d convolutions or fixed shape)\n",
-    "assert predicted_probabilities.output_shape == (None, None, 10371)"
+    "assert predicted_probabilities.output_shape == (None, None, 10371) #not 10373 since I didn't add #START# and #END# \n",
+    "                                                                   #the second time to vocab"
    ]
   },
   {
@@ -426,9 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#compile a function that takes input sentence and image mask, outputs loss and updates weights\n",
@@ -491,9 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -560,7 +545,6 @@
    "cell_type": "code",
    "execution_count": 211,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -673,9 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -751,7 +733,6 @@
    "cell_type": "code",
    "execution_count": 227,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
