--- a/hw7/Kholopov.ipynb
+++ b/hw7/Kholopov.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "**Вопрос 1**: Можно ли использовать сверточные сети для классификации текстов? Если нет обоснуйте :D, если да то как? как решить проблему с произвольной длинной входа?\n",
     "\n",
-    "<Ответ>\n",
+    "<Ответ>В принципе можно, если в качестве признаков брать tf-idf популярных на обучаемом сете n-грамм, такие признаки не будут зависеть от размера текста. Но эффективность этого подхода весьма сомнительно, поскольку свёртка признаков не будет нести логической нагрузки, в отличие от, например, изображений\n",
     "\n",
     "**Вопрос 2**: Чем LSTM лучше/хуже чем обычная RNN?\n",
     "\n",
@@ -16,7 +16,11 @@
     "\n",
     "**Вопрос 3**:  Выпишите производную $\\frac{d c_{n+1}}{d c_{k}}$ для LSTM http://colah.github.io/posts/2015-08-Understanding-LSTMs/, объясните формулу, когда производная затухает, когда взрывается?\n",
     "\n",
-    "<Ответ>$\\frac{d c_{n+1}}{d c_{k}} = \\frac{d c_{n+1}}{d c_{n}}\\frac{d c_{n}}{d c_{k}} = diag(\\sigma(x_{n+1},h_{n}))\\frac{d c_{n}}{d c_{k}} = diag(\\prod_{i=k}^{n}\\sigma(x_{i+1},h_{i}))$ (Где $\\prod$ - поэлементное произведение.) Если несколько компонент $x_{i}$ значительно меньше остальных, то градиент затухнет. Поскольку на каждом этапе берётся so\n",
+    "<Ответ>$\\frac{d c_{n+1}}{d c_{k}} = \\frac{d c_{n+1}}{d c_{n}}\\frac{d c_{n}}{d c_{k}} = diag(\\sigma((x_{n+1},h_{n})))\\frac{d c_{n}}{d c_{k}} = diag(\\prod_{i=k}^{n}\\sigma((x_{i+1},h_{i})))$ \n",
+    "\n",
+    "(Где $\\prod$ - поэлементное произведение, $(a, b)$ - конкатенация векторов $a$ и $b$.) \n",
+    "\n",
+    "Если несколько компонент $x_{i}$ значительно меньше остальных, то градиент затухнет. Поскольку сигмоида всегда меньше 1 по модулю, взрыва не происходит.\n",
     "\n",
     "**Вопрос 4**: Зачем нужен TBPTT почему BPTT плох?\n",
     "\n",
@@ -25,7 +29,7 @@
     "\n",
     "**Вопрос 5**: Как комбинировать рекуррентные и сверточные сети, а главное зачем? Приведите несколько примеров реальных задач.\n",
     "\n",
-    "<Ответ> Можно по картинкам генерировать текст или звук, можно генерировать подписи к музыке\n",
+    "<Ответ> Можно по картинкам генерировать текст или даже звук.\n",
     "\n",
     "**Вопрос 6**: Объясните интуицию выбора размера эмбединг слоя? почему это опасное место?\n",
     "\n",
